# max_rss

./: .gitignore  Cargo.toml  Makefile  README.md  debuglib.c  debuglib.h  justfile  max_rss.c
examples/: README.md  double-fork.rs  fork.rs  fork_threads.rs  kill_threads.rs  threads.rs
src/: cli.rs  main.rs
tests/: examples.rs
