[package]
name = "max_rss"
version = "0.4.1"
description = "A small utility to measure resident set size (rss) of a process"
homepage = "https://github.com/acheronfail/max_rss"
repository = "https://github.com/acheronfail/max_rss"
keywords = ["max_rss", "measurement", "memory", "rss", "resident"]
categories = ["command-line-utilities"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
lexopt = "0.3.0"
nix = { version = "0.27.1", features = ["ptrace", "signal"] }
serde = "1.0.195"
serde_json = "1.0.111"

[profile.release]
# See: https://github.com/johnthagen/min-sized-rust
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
